--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "svelte": "^3.37.0",
     "tailwindcss": "^2.0.4",
     "vite": "^2.3.7"
+  },
+  "dependencies": {
+    "svelte-spa-router": "^3.2.0"
   }
 }
